minimize .ja and .css files

--- a/css/style.less
+++ b/css/style.less
@@ -13,7 +13,7 @@ h2 {
 }
 
 h2:hover {
- color: gray;
+  color: gray;
 }
 
 div {
@@ -21,7 +21,5 @@ div {
   height: 100px;
   padding: 10px;
   border: 1px solid coral;
-
-  // align to center
-  margin: auto;
+  margin: auto; // align to center
 }
