--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,15 @@ h2 {
   cursor: default;
 }
 h2:hover {
-  color: gray;
+  color: lightgray;
 }
 div {
+  border: 1px solid coral;
+}
+#myDiv {
   width: 100px;
   height: 100px;
   padding: 10px;
-  border: 1px solid coral;
   margin: auto;
 }
 /*# sourceMappingURL=style.css.map */
