--- a/css/style.less
+++ b/css/style.less
@@ -13,13 +13,16 @@ h2 {
 }
 
 h2:hover {
-  color: gray;
+  color: lightgray;
 }
 
 div {
+  border: 1px solid coral;
+}
+
+#myDiv {
   width: 100px;
   height: 100px;
   padding: 10px;
-  border: 1px solid coral;
   margin: auto; // align to center
 }
