--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,22 @@
 body {
   padding: 20px;
-}
-body {
   font-family: sans-serif;
 }
 h2 {
-  color: coral;
+  color: #212121;
   cursor: default;
+  transition: 0.2s ease-in-out;
 }
-h2:hover {
+h2 span {
+  color: #7ea34b;
+  background-color: #fff;
+  transition: 0.2s ease-in-out;
+}
+h2:hover span span {
   color: lightgray;
 }
 div {
-  border: 1px solid coral;
+  border: 1px solid #212121;
 }
 #myDiv {
   width: 100px;
