--- a/css/style.less
+++ b/css/style.less
@@ -1,5 +1,5 @@
 // variables
-@typeBlue: #7ea34b;
+@typeColor: #7ea34b;
 @typeBlack: #212121;
 
 // main styles
@@ -12,15 +12,16 @@ body {
 h2 {
   color: @typeBlack;
   cursor: default;
-  transition: .2s ease-in-out;
+  transition: .125s ease-in-out;
   span {
-    color: @typeBlue;
+    color: @typeColor;
     background-color: #fff;
-    transition: .2s ease-in-out;
+    transition: .125s ease-in-out;
   }
 }
 
-h2:hover span {
+h2:hover {
+  color: lightgray;
   span {
     color: lightgray;
   }
