--- a/static/css/style.less
+++ b/static/css/style.less
@@ -1,5 +1,5 @@
 // variables
-@typeColor: #7ea34b;
+@typeColor: #f2ce6b;
 @typeBlack: #212121;
 
 // main styles
@@ -32,8 +32,8 @@ div {
 }
 
 #myDiv {
-  width: 100px;
-  height: 100px;
+  width: 108px;
+  height: 108px;
   padding: 10px;
   margin: auto; // align to center
 }
