--- a/static/css/style.less
+++ b/static/css/style.less
@@ -1,5 +1,5 @@
 // variables
-@typeColor: #f2ce6b;
+@typeColor: #f2cb5d;
 @typeBlack: #212121;
 
 // main styles
@@ -33,8 +33,11 @@ div {
 }
 
 #myDiv {
-  width: 108px;
-  height: 108px;
+  width: 130px;
+  height: 130px;
   padding: 10px;
   margin: auto; // align to center
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
 }
