--- a/static/css/_fonts.css
+++ b/static/css/_fonts.css
@@ -10,4 +10,4 @@
   font-family: 'Sansation-Bold';
   src: url(../fonts/Sansation-Regular.woff) format('woff');
 }
-/*# sourceMappingURL=fonts.css.map */
+/*# sourceMappingURL=_fonts.css.mapp */
