--- a/static/css/flexbox.less
+++ b/static/css/flexbox.less
@@ -1,5 +1,5 @@
-@import (optional) 'fonts';
-@import 'variables';
+@import (optional) '_fonts';
+@import '_variables';
 //@plugin '../../js/less_plugin';
 
 // normalization ------------------------------------
