backing up files.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,28 +1,1 @@
-@font-face {
-  font-family: 'Sansation-Light';
-  src: url(../assets/fonts/Sansation-Light.woff) format('woff');
-}
-@font-face {
-  font-family: 'Sansation-Regular';
-  src: url(../assets/fonts/Sansation-Regular.woff) format('woff');
-}
-@font-face {
-  font-family: 'Sansation-Bold';
-  src: url(../assets/fonts/Sansation-Bold.woff) format('woff');
-}
-body {
-  color: #fff;
-  background-color: #dc5d55;
-  padding: 4px 14px;
-  font-family: Sansation-Light, sans-serif;
-}
-.header {
-  cursor: default;
-  transition: 0.125s ease-in-out;
-}
-.header span {
-  color: #f2cb5d;
-  background-color: inherit;
-  transition: 0.125s ease-in-out;
-}
-/*# sourceMappingURL=style.css.map */
+@font-face{font-family:Sansation-Light;src:url(../assets/fonts/Sansation-Light.woff) format("woff")}body{color:#fff;background-color:#dc5d55;padding:4px 14px;font-family:Sansation-Light,sans-serif}.header{cursor:default}.header,.header span{transition:.125s ease-in-out}.header span{color:#f2cb5d;background-color:inherit}
